--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,16 @@
       "@webb-tools/masp-anchor-contracts/*": [
         "packages/masp-anchor-contracts/typechain-types/*"
       ],
+
+      /**
+      *   Utils TypeScript packages
+      */
+      "@webb-tools/protocol-solidity-extension-utils": [
+        "packages/utils/src"
+      ],
+      "@webb-tools/protocol-solidity-extension-utils/*": [
+        "packages/utils/src/*"
+      ],
     },
     "noEmit": true
   }
