--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fetch:fixtures": "cd solidity-fixtures && dvc pull && cd ../",
     "prettier": "prettier -c .",
     "publish:packages": "lerna run compile && lerna publish",
-    "publish:ci": "lerna run compile && lerna publish patch --yes --message 'chore: release new versions' ",
+    "publish:ci": "yarn compile && lerna publish patch --yes --message 'chore: release new versions' ",
     "setup:groth16:identity-vanchor2": "./scripts/bash/groth16/identity_vanchor/phase2_identity_vanchor2.sh",
     "setup:groth16:identity-vanchor8": "./scripts/bash/groth16/identity_vanchor/phase2_identity_vanchor8.sh",
     "setup:groth16:masp-vanchor2": "./scripts/bash/groth16/masp_vanchor/phase2_masp_vanchor2.sh",
