--- a/packages/masp-anchors/package.json
+++ b/packages/masp-anchors/package.json
@@ -18,12 +18,12 @@
     "url": "git://github.com/webb-tools/protocol-solidity-extensions.git"
   },
   "dependencies": {
-    "@webb-tools/anchors": "^0.5.43",
-    "@webb-tools/contracts": "^0.5.43",
+    "@webb-tools/anchors": "^1.0.7",
+    "@webb-tools/contracts": "^1.0.7",
+    "@webb-tools/create2-utils": "^1.0.7",
     "@webb-tools/masp-anchor-contracts": "^0.5.43",
-    "@webb-tools/interfaces": "^0.5.43",
-    "@webb-tools/utils": "^0.5.35",
-    "@webb-tools/sdk-core": "0.1.4-125",
+    "@webb-tools/interfaces": "^1.0.7",
+    "@webb-tools/utils": "^1.0.7",
     "chacha20": "^0.1.4",
     "ethers": "5.7.0",
     "jssha": "^3.2.0"
