--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "prettier -c .",
     "publish:packages": "lerna run compile && lerna publish",
     "publish:ci": "yarn compile && lerna publish patch --yes --message 'chore: release new versions' ",
+    "setup:groth16:batch-tree": "./scripts/bash/groth16/batch_tree/phase2_batch_tree.sh",
     "setup:groth16:masp-vanchor2": "./scripts/bash/groth16/masp_vanchor/phase2_masp_vanchor2.sh",
     "setup:groth16:masp-vanchor8": "./scripts/bash/groth16/masp_vanchor/phase2_masp_vanchor8.sh",
     "setup:groth16:reward": "./scripts/bash/groth16/masp_vanchor/phase2_reward.sh",
