chore: upgrade lerna& add setup-cmd for batch tree

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "prettier -c .",
     "publish:packages": "lerna run compile && lerna publish",
     "publish:ci": "yarn compile && lerna publish patch --yes --message 'chore: release new versions' ",
+    "setup:groth16:batch-tree": "./scripts/bash/groth16/batch_tree/phase2_batch_tree.sh",
     "setup:groth16:masp-vanchor2": "./scripts/bash/groth16/masp_vanchor/phase2_masp_vanchor2.sh",
     "setup:groth16:masp-vanchor8": "./scripts/bash/groth16/masp_vanchor/phase2_masp_vanchor8.sh",
     "setup:groth16:reward": "./scripts/bash/groth16/masp_vanchor/phase2_reward.sh",
@@ -60,7 +61,7 @@
     "hardhat-gas-reporter": "^1.0.9",
     "hardhat-preprocessor": "^0.1.5",
     "itertools": "^2.1.1",
-    "lerna": "^6.6.1",
+    "lerna": "^7.1.5",
     "nx": "^15.9.2",
     "prettier-plugin-solidity": "^1.1.3",
     "rimraf": "^5.0.0",
