--- a/.github/workflows/test-check.yml
+++ b/.github/workflows/test-check.yml
@@ -2,12 +2,12 @@ name: run-test-suite
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: ["main"]
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
-    branches: [ '**' ]
+    branches: ["**"]
     paths-ignore:
-      - 'README.md'
+      - "README.md"
 
   workflow_dispatch:
 
@@ -21,10 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        with: 
+        with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies 
+      - name: Install dependencies
         run: yarn install --production=false
 
       - name: clean
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build packages
         run: lerna run build
-        
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -63,16 +63,16 @@ jobs:
           path: packages
 
       - uses: actions/setup-node@v3
-        with: 
+        with:
           node-version: ${{ matrix.node-version }}
 
       - name: Setup DVC
         uses: iterative/setup-dvc@v1
-          
+
       - name: Fetch submodules
         run: git submodule update --init --recursive
 
-      - name: Install dependencies 
+      - name: Install dependencies
         run: yarn install --production=false
 
       - name: Populate fixtures
@@ -81,4 +81,4 @@ jobs:
       - name: Run test suite
         env:
           INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
-        run: yarn test:masp
+        run: yarn test
