--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "typechain": "^8.1.1"
   },
   "dependencies": {
+    "abdk-libraries-solidity": "^3.2.0",
     "circomlib": "^2.0.5",
     "typescript": "^5.0.4"
   }
