--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "tomlify-j0.4": "^3.0.0",
     "truffle-assertions": "^0.9.2",
     "ts-node": "^10.9.1",
-    "typechain": "^8.1.1"
+    "typechain": "^8.1.1",
+    "web3-utils": "^4.0.6"
   },
   "dependencies": {
     "abdk-libraries-solidity": "^3.2.0",
