--- a/packages/masp-reward/package.json
+++ b/packages/masp-reward/package.json
@@ -10,11 +10,11 @@
     "compile": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
-    "@webb-tools/masp-anchors": "^1.0.7",
     "@webb-tools/contracts": "^1.0.7",
     "@webb-tools/create2-utils": "^1.0.7",
     "@webb-tools/interfaces": "^1.0.7",
     "@webb-tools/masp-anchor-contracts": "^1.0.2",
+    "@webb-tools/masp-anchors": "file:../masp-anchors",
     "@webb-tools/utils": "^1.0.7",
     "ethers": "5.7.0",
     "snarkjs": "^0.6.10"
