--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,13 +2,13 @@ name: check
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: ["main"]
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
-    branches: [ '**' ]
+    branches: ["**"]
     paths-ignore:
-      - 'README.md'
-  
+      - "README.md"
+
   workflow_dispatch:
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.15.0]
+        node-version: [18.16]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -28,11 +28,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Setup DVC
         uses: iterative/setup-dvc@v1
-          
+
       - name: Fetch submodules
         run: git submodule update --init --recursive
 
-      - name: Install dependencies 
+      - name: Install dependencies
         run: yarn install --production=false
 
       - name: Populate fixtures
