Add PID incentive system and meta controller, fix forge build

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
       "packages/*"
     ],
     "nohoist": [
-      "**/@openzeppelin/**"
+      "**/@openzeppelin/**",
+      "**/@webb-tools/protocol-solidity",
+      "**/@webb-tools/protocol-solidity/**"
     ]
   },
   "engines": {
