--- a/packages/masp-reward/package.json
+++ b/packages/masp-reward/package.json
@@ -13,9 +13,9 @@
     "@webb-tools/contracts": "^1.0.10",
     "@webb-tools/create2-utils": "^1.0.10",
     "@webb-tools/interfaces": "^1.0.10",
-    "@webb-tools/masp-anchor-contracts": "^1.0.6",
+    "@webb-tools/masp-anchor-contracts": "file:../masp-anchor-contracts",
     "@webb-tools/masp-anchors": "file:../masp-anchors",
-    "@webb-tools/utils": "^1.0.7",
+    "@webb-tools/utils": "^1.0.10",
     "ethers": "5.7.0",
     "snarkjs": "^0.6.10"
   },
@@ -27,5 +27,5 @@
     "type": "git",
     "url": "git://github.com/webb-tools/masp-protocol.git"
   },
-  "version": "1.0.4"
+  "version": "1.0.6"
 }
