--- a/.github/workflows/publish-ts-docs.yml
+++ b/.github/workflows/publish-ts-docs.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies 
       - run: git submodule update --init --recursive
-      - run: cd solidity-fixtures && dvc pull && cd ..
+      - run: cd solidity-fixtures && dvc pull -v && cd ..
       - run: yarn install --production=false
       - run: yarn compile
       - run: yarn build:packages
