--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:ptau": "./scripts/bash/generate_phase1_ptau.sh",
     "clean": "rm -rf artifacts typechain-types && yarn clean:packages",
     "clean:packages": "lerna run clean",
-    "fetch:fixtures": "cd solidity-fixtures && dvc pull && cd ../",
+    "fetch:fixtures": "cd solidity-fixtures && dvc pull -v && cd ../",
     "prettier": "prettier -c .",
     "publish:packages": "lerna run compile && lerna publish",
     "publish:ci": "yarn compile && lerna publish patch --yes --message 'chore: release new versions' ",
