--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "setup:groth16:masp-vanchor8": "./scripts/bash/groth16/masp_vanchor/phase2_masp_vanchor8.sh",
     "setup:groth16:reward": "./scripts/bash/groth16/masp_vanchor/phase2_reward.sh",
     "setup:groth16:swap": "./scripts/bash/groth16/masp_vanchor/phase2_swap.sh",
+    "setup:all": "./scripts/bash/setup_all.sh",
     "ts-check": "tsc --noEmit -p ./tsconfig.json",
     "format": "prettier -w ."
   },
